# agent-mesh

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml  pyproject.toml
.claude/hooks/: post-edit-python.sh
.claude/rules/: python-style.md  reporting.md
db/: experience_schema.sql  schema.sql
docs/: architecture.md  decisions.md  task-gate-architecture.md
docs/runbook/: operations.md  troubleshooting.md
src/auth/: CLAUDE.md  aider_runner.py  check.py  claude_account_pool.py  cli_runner.py
src/context/: CLAUDE.md  __main__.py  store.py
src/gates/: __init__.py  profiles.py  registry.py  runner.py
src/gates/checks/: __init__.py  basic.py
src/models/: CLAUDE.md  task.py
src/orchestrator/: CLAUDE.md  change_converter.py  codebase_guide.py  cost_tracker.py  deployer.py  design_loop.py  dispatcher.py  experience_advisor.py  experience_store.py  gap_analyzer.py  gemini_planner.py  main.py  model_ranking.py  planner.py  project_classifier.py  project_loop.py  react_loop.py  retrospective.py  reviewer.py  router.py  run_history.py  scope_filter.py  spec_analyzer.py  spec_refiner.py  task_normalizer.py  verifier.py  verify_context.py  workspace.py
tests/: test_db_consistency.py  test_feature_slice_paths.py  test_gate_escalation.py  test_gate_resolver.py  test_no_file_changes.py  test_path_expansion.py  test_runtime_protection.py  test_scaffold_policy.py  test_scope_filter.py  test_task_normalizer.py  test_verifier_paths.py
tools/scripts/: sync-coreyllm.sh
